--- a/index.html
+++ b/index.html
@@ -7,18 +7,21 @@
     <!-- Write your HTML in this file -->
     <ul>
       <li>2 slices of bread</li>
+      <li>4 slices of cheese
+        <ul>
+          <li>cheddar</li>
+          <li>mozarella</li>
+          <li>pepper jack</li>
+        </ul>
+      </li>
       <li>1 tbsp of butter</li>
-      <li>4 slices of cheese</li>
-        <ul>cheddar</ul>
-        <ul>mozarella</ul>
-        <ul>pepper jack</ul>
     </ul>
-      <ol>
-        <li>spread butter on bread</li>
-        <li>place bread in frying pan & fry</li>
-        <li>add cheese on top of bread</li>
-        <li>cover with second slide of bread</li>
-        <li>turn over & fry for 2 minutes</li>
+    <ol>
+        <li>Spread butter on bread and frying pan</li>
+        <li>Place bread in frying pan and fry</li>
+        <li>Add cheese on top of bread</li>
+        <li>Cover with second slice of bread</li>
+        <li>Turn over and fry for 2 minutes</li>
       </ol>
   </body>
 </html>
